force-app/main/default/objects/SSP_HealthInsurancePlanTierDetail__c/SSP_HealthInsurancePlanTierDetail__c.object-meta.xml
<CustomObject>
    <description>Stores details about tier type and employer contribution for a policy</description>
    <label>SSP HealthInsurancePlanTierDetail</label>
    <nameField>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>SSP_HealthInsurancePlanTierDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSP HealthInsurancePlanTierDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>