force-app/main/default/objects/SSP_HealthInsurancePlanTierDetail__c/fields/EnrollmentTierLevel__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentTierLevel__c</fullName>
    <description>This field is used to store the Enrollment Tier Level</description>
    <label>Enrollment Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMPO</fullName>
                <label>Employee Only</label>
            </value>
            <value>
                <fullName>EMSP</fullName>
                <label>Employee plus Spouse</label>
            </value>
            <value>
                <fullName>EMOD</fullName>
                <label>Employee plus One dependent</label>
            </value>
            <value>
                <fullName>EMTD</fullName>
                <label>Employee plus two or more dependents</label>
            </value>
            <value>
                <fullName>FAM</fullName>
                <label>Family</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>