force-app/main/default/objects/SSP_HealthInsurancePlanTierDetail__c/fields/SSP_InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>SSP_InsurancePolicy__c</fullName>
    <description>This field is used to indicate the Insurance Policy for a Health Insurance Plan</description>
    <label>SSP_InsurancePolicy</label>
    <referenceTo>SSP_InsurancePolicy__c</referenceTo>
    <relationshipName>SSP_HealthInsurancePlanTierDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>