force-app/main/default/objects/SSP_HealthInsurancePlanTierDetail__c/recordTypes/HealthInsurancePlanTierDetail.recordType-meta.xml
<RecordType>
    <fullName>HealthInsurancePlanTierDetail</fullName>
    <active>true</active>
    <description>This is used to store details of Insurance Plan Tier.</description>
    <label>Health Insurance Plan Tier Detail</label>
</RecordType>